--- a/index.html
+++ b/index.html
@@ -874,13 +874,13 @@
         <a href="mailto:emaree86@gmail.com" class="contact-link">
           ✉ emaree86@gmail.com
         </a>
-        <a href="tel:+201060435920" class="contact-link">
-          📞 +201060435920
+        <a href="tel:+201221805839" class="contact-link">
+          📞 +201221805839
         </a>
-        <a href="https://linkedin.com" target="_blank" class="contact-link">
+        <a href="https://www.linkedin.com/in/eslam-mohamed-marey/" target="_blank" class="contact-link">
           🔗 LinkedIn
         </a>
-        <a href="https://github.com" target="_blank" class="contact-link">
+        <a href="https://github.com/eslamar3y" target="_blank" class="contact-link">
           ⌥ GitHub
         </a>
       </div>
@@ -927,4 +927,5 @@
 </script>
 </body>
 </html>
+
 
