--- a/index.html
+++ b/index.html
@@ -693,6 +693,7 @@
           <span class="skill-tag">OOP</span>
           <span class="skill-tag">Sanctum</span>
           <span class="skill-tag">JWT</span>
+          <span class="skill-tag">Filament</span>
         </div>
       </div>
       <div class="skill-group reveal">
@@ -927,5 +928,6 @@
 </script>
 </body>
 </html>
+
 
 
